--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,28 @@
-version: '3'
 services:
   backend:
-      build: ./backend
-      ports:
-        - 3000:3000
-      depends_on:
-        - mysql
-      networks:
-        capybara:
-          aliases:
-            - backend
+    build: ./backend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mysql
+    networks:
+      - capybara
+          
   mysql:
     image: mysql:latest
     container_name: my_mysql_container
     environment:
       MYSQL_ROOT_PASSWORD: root_password
       MYSQL_DATABASE: capydb
-      MYSQL_USER: user
+      MYSQL_USER: testuser
       MYSQL_PASSWORD: user_password
+      MYSQL_TCP_PORT: 3307
     ports:
-      - '3306:3306'
+      - "3307:3307"
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
-      capybara:
-        aliases:
-          - capydb
+      - capybara
 
 volumes:
   mysql_data:
