--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,8 @@ RUN npm install
 
 COPY . .
 
+ENV DATABASE_URL="mysql://root:root_password@mysql:3307/capydb"
+
 EXPOSE 3000
 
 RUN npx prisma generate
