--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   backend:
+    container_name: backend-api
     build: ./backend
+    command: "npm run dev"
     ports:
       - "3000:3000"
     depends_on:
@@ -10,7 +12,7 @@ services:
           
   mysql:
     image: mysql:latest
-    container_name: my_mysql_container
+    container_name: mysql-server
     environment:
       MYSQL_ROOT_PASSWORD: root_password
       MYSQL_DATABASE: capydb
